Added notice to News section, re: closing for rail road construction.

--- a/css/style.css
+++ b/css/style.css
@@ -12170,14 +12170,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(1) {
   z-index: 10;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(1):before {
   content: "1";
 }
 .slyde:nth-child(1).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12192,14 +12192,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(2) {
   z-index: 9;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(2):before {
   content: "2";
 }
 .slyde:nth-child(2).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
+  transform: rotate(1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12214,14 +12214,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(3) {
   z-index: 8;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(3):before {
   content: "3";
 }
 .slyde:nth-child(3).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
+  transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12236,14 +12236,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(4) {
   z-index: 7;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(4):before {
   content: "4";
 }
 .slyde:nth-child(4).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12258,14 +12258,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(5) {
   z-index: 6;
-  transform: rotate(-2deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(5):before {
   content: "5";
 }
 .slyde:nth-child(5).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-2deg) translate(-50%, -15rem);
+  transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12280,14 +12280,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(6) {
   z-index: 5;
-  transform: rotate(2deg) translate(-50%, -50%);
+  transform: rotate(3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(6):before {
   content: "6";
 }
 .slyde:nth-child(6).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(2deg) translate(-50%, -15rem);
+  transform: rotate(3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12302,56 +12302,12 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(7) {
   z-index: 4;
-  transform: rotate(-4deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(7):before {
   content: "7";
 }
 .slyde:nth-child(7).leave {
-  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-4deg) translate(-50%, -15rem);
-  opacity: 0;
-  pointer-events: none;
-  filter: sepia(0%);
-}
-.slyde.active {
-  transform: rotate(0) translate(-50%, -50%);
-  filter: sepia(0%);
-}
-.slyde.active article {
-  opacity: 1;
-}
-
-.slyde:nth-child(8) {
-  z-index: 3;
-  transform: rotate(-1deg) translate(-50%, -50%);
-}
-.slyde:nth-child(8):before {
-  content: "8";
-}
-.slyde:nth-child(8).leave {
-  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-1deg) translate(-50%, -15rem);
-  opacity: 0;
-  pointer-events: none;
-  filter: sepia(0%);
-}
-.slyde.active {
-  transform: rotate(0) translate(-50%, -50%);
-  filter: sepia(0%);
-}
-.slyde.active article {
-  opacity: 1;
-}
-
-.slyde:nth-child(9) {
-  z-index: 2;
-  transform: rotate(-2deg) translate(-50%, -50%);
-}
-.slyde:nth-child(9):before {
-  content: "9";
-}
-.slyde:nth-child(9).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
   transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
@@ -12366,16 +12322,60 @@ Copyright (c) 2015 Daniel Eden
   opacity: 1;
 }
 
+.slyde:nth-child(8) {
+  z-index: 3;
+  transform: rotate(3deg) translate(-50%, -50%);
+}
+.slyde:nth-child(8):before {
+  content: "8";
+}
+.slyde:nth-child(8).leave {
+  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
+  transform: rotate(3deg) translate(-50%, -15rem);
+  opacity: 0;
+  pointer-events: none;
+  filter: sepia(0%);
+}
+.slyde.active {
+  transform: rotate(0) translate(-50%, -50%);
+  filter: sepia(0%);
+}
+.slyde.active article {
+  opacity: 1;
+}
+
+.slyde:nth-child(9) {
+  z-index: 2;
+  transform: rotate(-1deg) translate(-50%, -50%);
+}
+.slyde:nth-child(9):before {
+  content: "9";
+}
+.slyde:nth-child(9).leave {
+  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
+  transform: rotate(-1deg) translate(-50%, -15rem);
+  opacity: 0;
+  pointer-events: none;
+  filter: sepia(0%);
+}
+.slyde.active {
+  transform: rotate(0) translate(-50%, -50%);
+  filter: sepia(0%);
+}
+.slyde.active article {
+  opacity: 1;
+}
+
 .slyde:nth-child(10) {
   z-index: 1;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(-3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(10):before {
   content: "10";
 }
 .slyde:nth-child(10).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
+  transform: rotate(-3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -18236,9 +18236,6 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 
 .specials {
   position: relative;
-  padding: 3rem 3.25rem 4rem 3.5rem;
-  background: rgb(250, 250, 250);
-  border-radius: 21px;
 }
 .specials.rounded-corners {
   border-radius: 21px;
@@ -18493,7 +18490,6 @@ section.homepage-notices .container .title {
   font-size: 48px;
 }
 section.homepage-notices .container .row .single-blog-area-start {
-  border: 1px solid #d7d7d7;
   border-radius: 1px;
   height: 100%;
   display: flex;
@@ -18507,7 +18503,7 @@ section.homepage-notices .container .row .single-blog-area-start a {
   flex-direction: column;
   height: 100%;
 }
-section.homepage-notices .container .row .single-blog-area-start a .image-area {
+section.homepage-notices .container .row .single-blog-area-start .image-area {
   width: 100%;
   height: 350px;
   overflow: hidden;
@@ -18516,51 +18512,52 @@ section.homepage-notices .container .row .single-blog-area-start a .image-area {
   justify-content: center;
   align-items: center;
 }
-section.homepage-notices .container .row .single-blog-area-start a .image-area img {
+section.homepage-notices .container .row .single-blog-area-start .image-area img {
   min-height: 100%;
   min-width: 105%;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area {
   padding: 3.5rem;
-  background: rgb(255, 255, 255);
+  padding-top: 4rem;
+  background: rgb(251, 251, 251);
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area .title {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area .title {
   font-size: 32px;
   margin-bottom: 1.5rem;
   margin-left: -1px;
   text-align: left;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area h6 {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area h6 {
   font-size: 23px;
   margin-bottom: 12px;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area h6 img,
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area h6 svg {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area h6 img,
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area h6 svg {
   height: 20px;
   width: auto;
   margin-top: -5px;
   margin-right: 12px;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area h6 img path,
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area h6 svg path {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area h6 img path,
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area h6 svg path {
   fill: rgb(185, 185, 185);
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area p {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area p {
   font-size: 16px;
   line-height: 152%;
   margin-bottom: 20px;
   letter-spacing: 0.1px;
-  color: #787878;
+  color: #191919;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area p .highlighted {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area p .highlighted {
   color: inherit;
   display: unset;
   font-family: inherit;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area p.deal {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area p.deal {
   font-family: "Oswald";
   font-size: 32px;
   color: var(--color-primary);
@@ -18570,26 +18567,26 @@ section.homepage-notices .container .row .single-blog-area-start a .inner-conten
   line-height: 1;
   margin-bottom: 0.5rem;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area p.deal:last-of-type {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area p.deal:last-of-type {
   margin-bottom: 0;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area .fire-icon {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area .fire-icon {
   width: auto;
   height: 14px;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area hr {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area hr {
   background-color: #c1c1c1;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area .row {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area .row {
   display: flex;
   flex-direction: row;
   color: var(--color-primary);
   margin-bottom: 0.5rem;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area .row div {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area .row div {
   width: fit-content;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area .row .spanner {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area .row .spanner {
   flex: 1;
   position: relative;
   top: -7px;
@@ -18598,30 +18595,30 @@ section.homepage-notices .container .row .single-blog-area-start a .inner-conten
   margin-left: 10px;
   margin-right: 10px;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .top-area .row.donation-row {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .top-area .row.donation-row {
   font-weight: 600;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .link-bar {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .link-bar {
   margin-top: 5rem;
   justify-content: space-between;
   align-items: center;
   font-family: "IKOB Italic";
   font-size: 21px;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .link-bar div {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .link-bar div {
   flex: 1;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .link-bar svg {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .link-bar svg {
   transition: all 0.15s ease;
   width: 45px;
 }
-section.homepage-notices .container .row .single-blog-area-start a .inner-content-area .link-bar svg path {
+section.homepage-notices .container .row .single-blog-area-start .inner-content-area .link-bar svg path {
   stroke: #262626;
 }
-section.homepage-notices .container .row .single-blog-area-start a:hover .inner-content-area .link-bar svg {
+section.homepage-notices .container .row .single-blog-area-start:hover .inner-content-area .link-bar svg {
   transform: translate(2px, -2px);
 }
-section.homepage-notices .container .row .single-blog-area-start a:hover .inner-content-area .link-bar svg path {
+section.homepage-notices .container .row .single-blog-area-start:hover .inner-content-area .link-bar svg path {
   stroke: var(--color-primary);
 }
 section.homepage-notices .container .row .single-blog-area-start:hover {
