--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -39,9 +39,9 @@
 
 .specials {
   position: relative;
-  padding: 3rem 3.25rem 4rem 3.5rem;
-  background: rgb(250, 250, 250);
-  border-radius: 21px;
+  // padding: 3rem 3.25rem 4rem 3.5rem;
+  // background: rgb(250, 250, 250);
+  // border-radius: 21px;
   &.rounded-corners {
     border-radius: 21px;
   }
@@ -353,7 +353,7 @@ section.homepage-notices {
     }
     .row {
       .single-blog-area-start {
-        border: 1px solid #d7d7d7;
+        // border: 1px solid #e0e0e0;
         border-radius: 1px;
         height: 100%;
         display: flex;
@@ -366,7 +366,9 @@ section.homepage-notices {
           display: flex;
           flex-direction: column;
           height: 100%;
-          .image-area {
+          
+        }
+        .image-area {
             width: 100%;
             height: 350px;
             overflow: hidden;
@@ -381,7 +383,8 @@ section.homepage-notices {
           }
           .inner-content-area {
             padding: 3.5rem;
-            background: rgb(255, 255, 255);
+            padding-top: 4rem;
+            background: rgb(251 251 251);
             flex-direction: column;
             justify-content: space-between;
             flex-grow: 1;
@@ -412,7 +415,7 @@ section.homepage-notices {
                 line-height: 152%;
                 margin-bottom: 20px;
                 letter-spacing: 0.1px;
-                color: #787878;
+                color: #191919;
                 .highlighted {
                   color: inherit;
                   display: unset;
@@ -498,7 +501,6 @@ section.homepage-notices {
               }
             }
           }
-        }
         &:hover {
           transform: translateY(-1px);
           box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
@@ -3237,7 +3239,7 @@ footer {
             h5 {
               font-size: 15px;
             }
-            .deal { 
+            .deal {
               font-size: 30px;
               margin-bottom: 1rem;
               line-height: 1.2;
