--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -366,141 +366,140 @@ section.homepage-notices {
           display: flex;
           flex-direction: column;
           height: 100%;
-          
         }
         .image-area {
-            width: 100%;
-            height: 350px;
-            overflow: hidden;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            img {
-              min-height: 100%;
-              min-width: 105%;
+          width: 100%;
+          height: 350px;
+          overflow: hidden;
+          position: relative;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          img {
+            min-height: 100%;
+            min-width: 105%;
+          }
+        }
+        .inner-content-area {
+          padding: 3.5rem;
+          padding-top: 4rem;
+          background: rgb(251 251 251);
+          flex-direction: column;
+          justify-content: space-between;
+          flex-grow: 1;
+          .top-area {
+            .title {
+              font-size: 32px;
+              margin-bottom: 1.5rem;
+              margin-left: -1px;
+              text-align: left;
+            }
+            h6 {
+              font-size: 23px;
+              margin-bottom: 12px;
+              img,
+              svg {
+                height: 20px;
+                width: auto;
+                margin-top: -5px;
+                margin-right: 12px;
+                path {
+                  fill: rgb(185, 185, 185);
+                }
+              }
+            }
+
+            p {
+              font-size: 16px;
+              line-height: 152%;
+              margin-bottom: 20px;
+              letter-spacing: 0.1px;
+              color: #191919;
+              .highlighted {
+                color: inherit;
+                display: unset;
+                font-family: inherit;
+              }
+              &.deal {
+                font-family: "Oswald";
+                font-size: 32px;
+                color: var(--color-primary);
+                font-weight: 600;
+                letter-spacing: -1px;
+                text-transform: uppercase;
+                line-height: 1;
+                // background: url(../assets/images/service/shiny-2.gif) no-repeat;
+                // background-size: 120%;
+                // -webkit-background-clip: text;
+                // -webkit-text-fill-color: transparent;
+                margin-bottom: 0.5rem;
+                &:last-of-type {
+                  margin-bottom: 0;
+                }
+              }
+            }
+            .fire-icon {
+              width: auto;
+              height: 14px;
+            }
+            hr {
+              background-color: #c1c1c1;
+            }
+            .row {
+              display: flex;
+              flex-direction: row;
+              color: var(--color-primary);
+              margin-bottom: 0.5rem;
+              div {
+                width: fit-content;
+              }
+              .spanner {
+                flex: 1;
+                position: relative;
+                top: -7px;
+                flex: 1;
+                border-bottom: 1.5px dotted rgb(0 0 0 / 7%);
+                margin-left: 10px;
+                margin-right: 10px;
+              }
+              &.donation-row {
+                font-weight: 600;
+              }
             }
           }
-          .inner-content-area {
-            padding: 3.5rem;
-            padding-top: 4rem;
-            background: rgb(251 251 251);
-            flex-direction: column;
+          .link-bar {
+            margin-top: 5rem;
             justify-content: space-between;
-            flex-grow: 1;
-            .top-area {
-              .title {
-                font-size: 32px;
-                margin-bottom: 1.5rem;
-                margin-left: -1px;
-                text-align: left;
-              }
-              h6 {
-                font-size: 23px;
-                margin-bottom: 12px;
-                img,
-                svg {
-                  height: 20px;
-                  width: auto;
-                  margin-top: -5px;
-                  margin-right: 12px;
-                  path {
-                    fill: rgb(185, 185, 185);
-                  }
-                }
-              }
+            align-items: center;
+            font-family: "IKOB Italic";
+            font-size: 21px;
 
-              p {
-                font-size: 16px;
-                line-height: 152%;
-                margin-bottom: 20px;
-                letter-spacing: 0.1px;
-                color: #191919;
-                .highlighted {
-                  color: inherit;
-                  display: unset;
-                  font-family: inherit;
-                }
-                &.deal {
-                  font-family: "Oswald";
-                  font-size: 32px;
-                  color: var(--color-primary);
-                  font-weight: 600;
-                  letter-spacing: -1px;
-                  text-transform: uppercase;
-                  line-height: 1;
-                  // background: url(../assets/images/service/shiny-2.gif) no-repeat;
-                  // background-size: 120%;
-                  // -webkit-background-clip: text;
-                  // -webkit-text-fill-color: transparent;
-                  margin-bottom: 0.5rem;
-                  &:last-of-type {
-                    margin-bottom: 0;
-                  }
-                }
+            div {
+              flex: 1;
+            }
+            svg {
+              transition: all 0.15s ease;
+              width: 45px;
+              path {
+                stroke: #262626;
               }
-              .fire-icon {
-                width: auto;
-                height: 14px;
-              }
-              hr {
-                background-color: #c1c1c1;
-              }
-              .row {
-                display: flex;
-                flex-direction: row;
-                color: var(--color-primary);
-                margin-bottom: 0.5rem;
-                div {
-                  width: fit-content;
-                }
-                .spanner {
-                  flex: 1;
-                  position: relative;
-                  top: -7px;
-                  flex: 1;
-                  border-bottom: 1.5px dotted rgb(0 0 0 / 7%);
-                  margin-left: 10px;
-                  margin-right: 10px;
-                }
-                &.donation-row {
-                  font-weight: 600;
-                }
-              }
+            }
+          }
+        }
+        &:hover {
+          .inner-content-area {
+            .top-area {
             }
             .link-bar {
-              margin-top: 5rem;
-              justify-content: space-between;
-              align-items: center;
-              font-family: "IKOB Italic";
-              font-size: 21px;
-
-              div {
-                flex: 1;
-              }
               svg {
-                transition: all 0.15s ease;
-                width: 45px;
+                transform: translate(2px, -2px);
                 path {
-                  stroke: #262626;
+                  stroke: var(--color-primary);
                 }
               }
             }
           }
-          &:hover {
-            .inner-content-area {
-              .top-area {
-              }
-              .link-bar {
-                svg {
-                  transform: translate(2px, -2px);
-                  path {
-                    stroke: var(--color-primary);
-                  }
-                }
-              }
-            }
-          }
+        }
         &:hover {
           transform: translateY(-1px);
           box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
@@ -1911,8 +1910,21 @@ section.pro-shop-body {
           font-size: 23px;
           line-height: 140%;
         }
+        .row {
+          [class*="col"] {
+            .specials {
+              padding: 4rem 3rem 4.5rem;
+              background: #f8f8f8;
+              border-radius: 21px;
+            }
+          }
+        }
       }
     }
+  }
+  .container-of-a-pro-shop-special {
+    padding-top: 0rem;
+    padding-bottom: 10rem;
   }
   .initial-note {
     padding: 3rem;
@@ -3240,7 +3252,7 @@ footer {
               font-size: 15px;
             }
             .deal {
-              font-size: 30px;
+              font-size: 28px;
               margin-bottom: 1rem;
               line-height: 1.2;
             }
@@ -3301,6 +3313,10 @@ footer {
           }
         }
       }
+    }
+    .container-of-a-pro-shop-special {
+      padding-top: 5rem;
+      padding-bottom: 4rem;
     }
   }
 
