Fixing Oswald font implementation.

--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -3252,7 +3252,7 @@ footer {
               font-size: 15px;
             }
             .deal {
-              font-size: 28px;
+              font-size: 30px;
               margin-bottom: 1rem;
               line-height: 1.2;
             }
@@ -3306,7 +3306,7 @@ footer {
     }
     .band-of-brands {
       .container {
-        padding: 3rem 0;
+        padding: 5rem 0 6.5rem;
         .row {
           .brand {
             max-width: 34%;
