--- a/assets/scss/default/_typography.scss
+++ b/assets/scss/default/_typography.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+
 //* Inter
 // Regular
 @font-face {
@@ -69,13 +72,13 @@
 }
 
 
-//* Oswald
-@font-face {
-  font-family: "Oswald";
-  src: url("../assets/fonts/Alte/Oswald-Variable.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
+// //* Oswald
+// @font-face {
+//   font-family: "Oswald";
+//   src: url("../assets/fonts/Oswald-Variable.ttf") format("truetype");
+//   font-weight: normal;
+//   font-style: normal;
+// }
 
 
 
