--- a/assets/scss/default/_typography.scss
+++ b/assets/scss/default/_typography.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
 
 
 //* Inter
@@ -72,13 +73,11 @@
 }
 
 
-// //* Oswald
-// @font-face {
-//   font-family: "Oswald";
-//   src: url("../assets/fonts/Oswald-Variable.ttf") format("truetype");
-//   font-weight: normal;
-//   font-style: normal;
-// }
+//* Oswald
+@font-face {
+  font-family: "Oswald";
+  src: url("../assets/fonts/Oswald-Variable.ttf") format("truetype");
+}
 
 
 
