--- a/assets/scss/elements/_back-top.scss
+++ b/assets/scss/elements/_back-top.scss
@@ -55,7 +55,7 @@
 
 .progress-wrap::before {
     position: absolute;
-    font-family: var(--font-3);
+    // font-family: var(--font-3);
     content: '\f077';
     text-align: center;
     line-height: 46px;
