--- a/assets/scss/elements/_calendar.scss
+++ b/assets/scss/elements/_calendar.scss
@@ -331,6 +331,7 @@ $outline-color: #e6e6e6;
         padding: 0;
         color: #767364;
         letter-spacing: 0.2px;
+        white-space: pre-line;
       }
       .event-list-footer {
         padding: 2rem 0 0 0;
