--- a/assets/scss/elements/_dropdown.scss
+++ b/assets/scss/elements/_dropdown.scss
@@ -29,7 +29,7 @@ li.has-dropdown {
       padding: 0;
 
       a {
-        padding: 9px 16px !important;
+        padding: 9px 16px 9px 14px !important;
         font-weight: 400;
         font-size: 16px;
         transition: opacity 0.1s ease-out;
