--- a/assets/scss/default/_typography.scss
+++ b/assets/scss/default/_typography.scss
@@ -1,6 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap");
 
 //* Inter
 // Regular
@@ -67,19 +65,25 @@
 }
 @font-face {
   font-family: "IKOB Italic";
-  src: url("../assets/fonts/happy-times-NG_italic_master.otf") format("opentype");
-  font-weight: normal;
-  font-style: italic;
+  src: url("../assets/fonts/ikob-italic.woff2") format("woff2"),
+    url("../assets/fonts/happy-times-NG_italic_master.otf") format("opentype"),
+    url("../assets/fonts/ikob-italic.otf") format("opentype");
 }
 
+//~ the model
+// @font-face {
+//   font-family: "YourCustomFont";
+//   src: url("yourcustomfont.woff2") format("woff2"),
+//     url("yourcustomfont.woff") format("woff"),
+//     url("yourcustomfont.ttf") format("truetype");
+//   // /* Add other formats as needed for wider compatibility */
+// }
 
 //* Oswald
 @font-face {
   font-family: "Oswald";
   src: url("../assets/fonts/Oswald-Variable.ttf") format("truetype");
 }
-
-
 
 * {
   box-sizing: border-box;
@@ -157,7 +161,6 @@ hr {
   margin: 0;
   margin-bottom: 20px;
 }
-
 
 h5,
 h6,
@@ -342,7 +345,7 @@ p {
   font-weight: var(--p-regular);
   color: var(--color-body);
   margin: 0 0 40px;
-  letter-spacing: -.25px;
+  letter-spacing: -0.25px;
   @media #{$sm-layout} {
     margin: 0 0 20px;
     font-size: 16px;
