--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -77,5 +77,7 @@
 @import "elements/timeline";
 @import "elements/gradient-blur";
 
+@import "default/reset";
+
 // Custom
 @import "default/custom";
