--- a/css/style.css
+++ b/css/style.css
@@ -12196,14 +12196,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(1) {
   z-index: 10;
-  transform: rotate(2deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(1):before {
   content: "1";
 }
 .slyde:nth-child(1).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(2deg) translate(-50%, -15rem);
+  transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12218,14 +12218,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(2) {
   z-index: 9;
-  transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(2):before {
   content: "2";
 }
 .slyde:nth-child(2).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(0deg) translate(-50%, -15rem);
+  transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12262,14 +12262,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(4) {
   z-index: 7;
-  transform: rotate(-2deg) translate(-50%, -50%);
+  transform: rotate(-1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(4):before {
   content: "4";
 }
 .slyde:nth-child(4).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-2deg) translate(-50%, -15rem);
+  transform: rotate(-1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12284,14 +12284,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(5) {
   z-index: 6;
-  transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(5):before {
   content: "5";
 }
 .slyde:nth-child(5).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(0deg) translate(-50%, -15rem);
+  transform: rotate(1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12328,34 +12328,12 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(7) {
   z-index: 4;
-  transform: rotate(-1deg) translate(-50%, -50%);
+  transform: rotate(-2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(7):before {
   content: "7";
 }
 .slyde:nth-child(7).leave {
-  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-1deg) translate(-50%, -15rem);
-  opacity: 0;
-  pointer-events: none;
-  filter: sepia(0%);
-}
-.slyde.active {
-  transform: rotate(0) translate(-50%, -50%);
-  filter: sepia(0%);
-}
-.slyde.active article {
-  opacity: 1;
-}
-
-.slyde:nth-child(8) {
-  z-index: 3;
-  transform: rotate(-2deg) translate(-50%, -50%);
-}
-.slyde:nth-child(8):before {
-  content: "8";
-}
-.slyde:nth-child(8).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
   transform: rotate(-2deg) translate(-50%, -15rem);
   opacity: 0;
@@ -12370,16 +12348,38 @@ Copyright (c) 2015 Daniel Eden
   opacity: 1;
 }
 
+.slyde:nth-child(8) {
+  z-index: 3;
+  transform: rotate(3deg) translate(-50%, -50%);
+}
+.slyde:nth-child(8):before {
+  content: "8";
+}
+.slyde:nth-child(8).leave {
+  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
+  transform: rotate(3deg) translate(-50%, -15rem);
+  opacity: 0;
+  pointer-events: none;
+  filter: sepia(0%);
+}
+.slyde.active {
+  transform: rotate(0) translate(-50%, -50%);
+  filter: sepia(0%);
+}
+.slyde.active article {
+  opacity: 1;
+}
+
 .slyde:nth-child(9) {
   z-index: 2;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(9):before {
   content: "9";
 }
 .slyde:nth-child(9).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12394,14 +12394,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(10) {
   z-index: 1;
-  transform: rotate(0deg) translate(-50%, -50%);
+  transform: rotate(2deg) translate(-50%, -50%);
 }
 .slyde:nth-child(10):before {
   content: "10";
 }
 .slyde:nth-child(10).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(0deg) translate(-50%, -15rem);
+  transform: rotate(2deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -14974,6 +14974,10 @@ section.calendar-section .container #calendar .fc-view-harness .fc-daygrid table
     width: 100%;
     justify-content: center;
   }
+  section.calendar-section .container #calendar .fc-view-harness .fc-daygrid table thead .fc-col-header-cell-cushion {
+    font-size: 12px;
+    padding-bottom: 5px;
+  }
   .events-list-wrapper .event-list-item .event-list-title {
     line-height: 130%;
   }
@@ -16907,33 +16911,30 @@ section.cta.blonde .rts-cts-area {
 .side-bar .inner-main-wrapper-desk .inner-content .footer a.rts-btn {
   margin: auto;
 }
-
 .side-bar.show {
   right: 0;
   overflow-y: auto;
+  box-shadow: -5px 0 30px 30px rgba(0, 0, 0, 0.15);
 }
 
 .side-bar button {
-  max-width: max-content;
-  margin-right: auto;
-  margin-left: -53px;
-  margin-top: 0;
+  width: 42px;
+  height: 42px;
+  top: 0;
+  left: 0;
   position: absolute;
   border: none;
+  background-color: var(--color-primary);
 }
-.side-bar button i {
-  color: #ffffff;
-  height: 50px;
-  width: 50px;
-  border-radius: 0;
-  display: flex;
-  align-items: center;
-  font-weight: 300;
-  justify-content: center;
-  margin-left: 14px;
-  margin-top: -53px;
-  font-size: 27px;
-  background: var(--color-primary);
+.side-bar button svg {
+  width: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.side-bar button svg polygon {
+  fill: #fff;
 }
 
 .mobile-menu-main nav ul {
@@ -16945,13 +16946,36 @@ section.cta.blonde .rts-cts-area {
   padding: 0;
 }
 .mobile-menu-main nav ul li a.main {
-  padding: 12px 0 14px 0;
+  padding: 10px 0 !important;
   border-bottom: 1px solid #f3f3f3;
   cursor: pointer;
   font-weight: 500;
+  font-size: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .mobile-menu-main nav ul li.has-droupdown {
   position: relative;
+}
+.mobile-menu-main nav ul li.has-droupdown a .dd-box {
+  position: absolute;
+  right: 0;
+  top: 4px;
+  display: inline-block;
+  padding: 6px 12px;
+  background-color: var(--color-primary);
+}
+.mobile-menu-main nav ul li.has-droupdown a .dd-box .chevron {
+  width: 14px;
+  height: auto;
+  transition: transform 0.15s ease;
+}
+.mobile-menu-main nav ul li.has-droupdown a .dd-box .chevron path {
+  fill: #fff;
+}
+.mobile-menu-main nav ul li.has-droupdown.mm-active a .dd-box .chevron {
+  transform: rotate(180deg);
 }
 .mobile-menu-main nav ul li.has-droupdown ul {
   padding: 0;
@@ -16959,37 +16983,20 @@ section.cta.blonde .rts-cts-area {
 .mobile-menu-main nav ul li.has-droupdown ul a {
   padding: 10px 0;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 15px;
 }
 .mobile-menu-main nav ul li.has-droupdown ul a.tag {
   font-weight: 500;
   margin-top: 15px;
-  font-size: 16px;
+  font-size: 15px;
   border-bottom: 2px solid var(--color-primary);
   padding: 10px 0;
   margin-top: 0;
 }
 .mobile-menu-main nav ul li.has-droupdown ul li {
-  margin: 7px 0 !important;
+  margin: 0 !important;
   border-bottom: 1px solid #f3f3f3;
-  margin-top: 0 !important;
-}
-.mobile-menu-main nav ul li.has-droupdown::after {
-  position: absolute;
-  content: "\f078";
-  font-family: "Font Awesome 6 pro" !important;
-  font-size: 16px;
-  right: 0;
-  font-weight: 400;
-  top: 5px;
-  padding: 8px 13px;
-  color: #fff;
-  background: var(--color-primary) !important;
-  pointer-events: none;
-  cursor: pointer;
-}
-.mobile-menu-main nav ul li.has-droupdown.mm-active::after {
-  content: "\f077";
+  padding-left: 10px;
 }
 .mobile-menu-main nav ul li.has-droupdown.third-lvl::after {
   font-size: 10px;
@@ -17003,8 +17010,8 @@ section.cta.blonde .rts-cts-area {
   position: relative;
   z-index: 1;
   transition: all 0.3s;
-  color: #1F1F25;
-  font-size: 16px;
+  color: #1f1f25;
+  font-size: 15px;
 }
 .mobile-menu-main nav ul li.has-droupdown.third-lvl ul li:hover {
   color: var(--color-primary);
@@ -17014,8 +17021,8 @@ section.cta.blonde .rts-cts-area {
   width: 100%;
   height: 100%;
   transition: all 0.3s;
-  font-size: 16px;
-  color: #1F1F25;
+  font-size: 15px;
+  color: #1f1f25;
 }
 .mobile-menu-main nav ul li a {
   display: block;
@@ -17030,16 +17037,6 @@ section.cta.blonde .rts-cts-area {
 .header-one .main-nav-desk nav ul li.has-droupdown .submenu.inner-page .sub-dropdown:hover::after {
   color: var(--color-primary);
 }
-.header-one .main-nav-desk nav ul li.has-droupdown .submenu.inner-page .sub-dropdown::after {
-  position: absolute;
-  content: "\f105";
-  font-family: "Font Awesome 6 Pro" !important;
-  font-size: 16px;
-  right: 25px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #fff;
-}
 .header-one .main-nav-desk nav ul li.has-droupdown .submenu.inner-page .sub-dropdown .third-lvl {
   margin-left: -4px;
 }
@@ -17052,16 +17049,6 @@ section.cta.blonde .rts-cts-area {
 }
 .header-three .main-nav-desk nav ul li.has-droupdown .submenu.inner-page .sub-dropdown:hover::after {
   color: var(--color-primary);
-}
-.header-three .main-nav-desk nav ul li.has-droupdown .submenu.inner-page .sub-dropdown::after {
-  position: absolute;
-  content: "\f105";
-  font-family: "Font Awesome 6 Pro" !important;
-  font-size: 16px;
-  right: 25px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #fff;
 }
 .header-three .main-nav-desk nav ul li.has-droupdown .submenu.inner-page .sub-dropdown .third-lvl {
   margin-left: -4px;
@@ -17124,15 +17111,6 @@ header.heder-two .sub-dropdown:hover .submenu.third-lvl.base {
   display: block;
   margin-left: 0 !important;
 }
-header.heder-two .sub-dropdown::after {
-  position: absolute;
-  content: "\f105";
-  font-family: "Font Awesome 6 Pro" !important;
-  font-size: 16px;
-  right: 20px;
-  top: 8px;
-  color: #fff;
-}
 header.heder-two .sub-dropdown:hover a.sub-menu-link {
   color: var(--color-primary) !important;
 }
@@ -17150,16 +17128,6 @@ header.header-three .sub-dropdown:hover .submenu.third-lvl.base {
   right: 3px;
   display: block;
   margin-left: 0 !important;
-}
-header.header-three .sub-dropdown::after {
-  position: absolute;
-  content: "\f105";
-  font-family: "Font Awesome 6 Pro" !important;
-  font-size: 16px;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #fff;
 }
 header.header-three .sub-dropdown:hover a.sub-menu-link {
   color: var(--color-primary) !important;
@@ -18754,7 +18722,7 @@ section.sponsors-section-on-open-tournaments-page .container .row [class*=col] .
 
 .my-btn {
   color: white !important;
-  font-family: "Aeonik", sans-serif !important;
+  font-family: "Inter", sans-serif !important;
   font-weight: 300 !important;
   height: 42px !important;
   gap: 19px !important;
@@ -21414,7 +21382,8 @@ footer .rts-copyright-area-one .new-row p {
   }
   section.homepage-notices .container .row [class*=col] .single-blog-area-start a .inner-content-area .top-area > *:not(h3, h6),
   section.homepage-notices .container .row [class*=col] .single-blog-area-start a .inner-content-area .top-area p {
-    font-size: 15px;
+    font-size: 14px;
+    line-height: 1.45;
   }
   section.homepage-notices .container .row [class*=col] .single-blog-area-start a .inner-content-area .top-area .title {
     font-size: 25px;
@@ -21429,6 +21398,30 @@ footer .rts-copyright-area-one .new-row p {
     margin-bottom: 14px;
   }
   section.homepage-notices .container .row [class*=col] .single-blog-area-start a .inner-content-area .link-bar {
+    margin-top: 1rem;
+    font-size: 18px;
+  }
+  section.homepage-notices .container .row [class*=col] .single-blog-area-start .inner-content-area {
+    padding: 3rem 2rem 2rem 2rem;
+  }
+  section.homepage-notices .container .row [class*=col] .single-blog-area-start .inner-content-area .top-area > *:not(h3, h6),
+  section.homepage-notices .container .row [class*=col] .single-blog-area-start .inner-content-area .top-area p {
+    font-size: 14px;
+    line-height: 1.45;
+  }
+  section.homepage-notices .container .row [class*=col] .single-blog-area-start .inner-content-area .top-area .title {
+    font-size: 25px;
+    margin-bottom: 1rem;
+  }
+  section.homepage-notices .container .row [class*=col] .single-blog-area-start .inner-content-area .top-area h6 {
+    font-size: 20px;
+    margin-bottom: 3px;
+    line-height: 111%;
+  }
+  section.homepage-notices .container .row [class*=col] .single-blog-area-start .inner-content-area .top-area hr {
+    margin-bottom: 14px;
+  }
+  section.homepage-notices .container .row [class*=col] .single-blog-area-start .inner-content-area .link-bar {
     margin-top: 1rem;
     font-size: 18px;
   }
